--- a/templates/situation_home.html
+++ b/templates/situation_home.html
@@ -55,15 +55,54 @@
 
 
     </script>
+    <style>
+        @font-face{
+            font-family:coffee;
+            src: url("static/fonts/Lets Coffee.ttf");
+        }
+        html{
+            width:100%;
+            height:100%;
+        }
+        body{
+            width:100%;
+            height:100%;
+            background-image: linear-gradient(#050037, #4d004e);
+        }
+        #wrapper{
+            display:flex;
+            width:100%;
+            height:100%;
+            margin:0px;
+            padding:0px;
+            flex-direction:column;
+            justify-content:space-around;
+        }
+        h1{
+            color:white;
+            text-align:center;
+            font-family:coffee;
+            color:#00c7d4;
+            -webkit-text-stroke: 2px white;
+            font-size:72px;
+        }
+    </style>
 </head>
 <body>
 
-<input id="name" name="name" />
-<div id="name_error"></div>
-<button onclick="make_game()">HOST GAME</button>
+<div id="wrapper">
+    <h1>On one condition</h1>
+    <div>
+        <input id="name" name="name" />
+        <div id="name_error"></div>
+        <button onclick="make_game()">HOST GAME</button>
+    </div>
+    <div>
+        <input id="keycode" name="keycode" />
+        <div id="keycode_error"></div>
+        <button onclick="join_game()">JOIN GAME</button>
+    </div>
+</div>
 
-<input id="keycode" name="keycode" />
-<div id="keycode_error"></div>
-<button onclick="join_game()">JOIN GAME</button>
 </body>
 </html>
