--- a/templates/situation_home.html
+++ b/templates/situation_home.html
@@ -124,6 +124,9 @@
         .warning{
             color:red;
         }
+        button:hover{
+            background-color: #004c52;
+        }
     </style>
 </head>
 <body>
